--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # Travis CI (MIT License) configuration file
 # @link https://travis-ci.org/
 
-# Use new container based environment 
+# Use new container based environment
 sudo: false
 
 # Declare project language.
@@ -13,15 +13,13 @@ matrix:
   fast_finish: true
 
   include:
-    # aliased to 5.2.17
-    - php: '5.2'
-    # aliased to a recent 5.4.x version
-    - php: '5.4'
     # aliased to a recent 5.6.x version
     - php: '5.6'
-      env: SNIFF=1
+      env: SNIFF=0
     # aliased to a recent 7.x version
     - php: '7.0'
+    # aliased to a recent 7.1.x version
+    - php: '7.1'
     # aliased to a recent hhvm version
     - php: 'hhvm'
 
@@ -60,4 +58,4 @@ script:
     # -n flag: Do not print warnings. (shortcut for --warning-severity=0)
     # --standard: Use WordPress as the standard.
     # --extensions: Only sniff PHP files.
-    - if [[ "$SNIFF" == "1" ]]; then $PHPCS_DIR/scripts/phpcs -p -s -v -n . --standard="WordPress-Core" --extensions=php; fi
+    - if [[ "$SNIFF" == "1" ]]; then $PHPCS_DIR/scripts/phpcs -p -s -v -n . --standard=WordPress-Core  --extensions=php; fi
