--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ matrix:
     - php: '7.0'
     # aliased to a recent 7.1.x version
     - php: '7.1'
+    # aliased to a recent 7.2.x version
+    - php: '7.2'
+    # aliased to a recent 7.3.x version
+    - php: '7.3'
     # aliased to a recent hhvm version
     - php: 'hhvm'
 
